--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
     },
     "dependencies": {
         "crypto": "1.0.1",
-        "eventemitter3": "3.1.0",
-        "request-promise": "4.2.2",
-        "tmi.js": "1.2.1",
-        "winston": "3.0.0"
+        "eventemitter3": "^4.0.0",
+        "request-promise": "^4.2.5",
+        "tmi.js": "^1.5.0",
+        "winston": "^3.2.1"
     },
     "devDependencies": {
-        "chai": "4.1.2",
-        "cross-env": "5.2.0",
-        "eslint": "5.1.0",
-        "eslint-plugin-mocha": "5.1.0",
-        "jsdoc": "3.5.5",
+        "chai": "^4.2.0",
+        "cross-env": "^7.0.0",
+        "eslint": "^6.8.0",
+        "eslint-plugin-mocha": "^6.2.2",
+        "jsdoc": "^3.6.3",
         "minami": "1.2.3",
-        "mocha": "5.2.0",
-        "nyc": "12.0.2"
+        "mocha": "^7.0.1",
+        "nyc": "^15.0.0"
     }
 }
